FIXED: Instagram embed overflow error

--- a/src/styles.css
+++ b/src/styles.css
@@ -223,3 +223,9 @@ img {
     text-align: center;
   }
 }
+
+iframe.instagram-media {
+  max-width: 100% !important;
+  width: 100% !important;
+  min-width: auto !important;
+}
